<resources>
    <string name="app_name">MacroLife</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ComplexGoalTxt">Complex Goals</string>
    <string name="RepeatingGoalText">Repeating Tasks</string>
    <string name="OrdinaryTasksText">Ordinary Tasks</string>
    <string name="ListTaskText">List Tasks</string>
    <string name="NewTask">New Task</string>
    <string name="Empty_String"> </string>

    <string name="animation_end">M50 95, C 10 95 10 50 10 50, H 95, C 95 50 95 95 50 95</string>
    <string name="animation_start">M50 95, C 50 95, 50 95, 50 95, H50, C 50 95, 50 95, 50 95</string>
    <!--Toast Strings-->
    <string name="Toast_Empty_Note">Empty Note</string>
    <string name="Toast_Tittle_WARNING">WARNING</string>
    <string name="Toast_Subtitle">Once deleted this action can\'t be undone.</string>
    <string name="set_start_date">Set at least start date before setting end date</string>
    <string name="set_start_time">You must set start time before setting end time</string>
    <string name="toast_no_pattern">No repeat pattern defined</string>
    <string name="go_to_editing_options">Repeating events dates should be altered via its own tab</string>
    <!--Days of week-->
    <string name="Monday_Short">M</string>
    <string name="Tuesday_Short">T</string>
    <string name="Wednesday_Short">W</string>
    <string name="Thursday_Short">T</string>
    <string name="Friday_Short">F</string>
    <string name="Saturday_Short">S</string>
    <string name="Sunday_Short">S</string>

    <string name="Monday_Long">Monday</string>
    <string name="Tuesday_Long">Tuesday</string>
    <string name="Wednesday_Long">Wednesday</string>
    <string name="Thursday_Long">Thursday</string>
    <string name="Friday_Long">Friday</string>
    <string name="Saturday_Long">Saturday</string>
    <string name="Sunday_Long">Sunday</string>

    <string name="week">Week number</string>
    <string name="to">to</string>

    <!-- Months -->
    <string name="January_Short">Jan</string>
    <string name="February_Short">Feb</string>
    <string name="March_Short">Mar</string>
    <string name="April_Short">Apr</string>
    <string name="May_Short">May</string>
    <string name="June_Short">Jun</string>
    <string name="July_Short">Jul</string>
    <string name="August_Short">Aug</string>
    <string name="September_Short">Sep</string>
    <string name="October_Short">Oct</string>
    <string name="November_Short">Nov</string>
    <string name="December_Short">Dec</string>

    <!--Fragment Descriptions-->
    <string name="CompletedList_title">Completed Tasks</string>
    <string name="ComplexList_title">Complex Tasks</string>
    <string name="UpcomingList_title">Current Tasks</string>
    <string name="OverdueList_title">Overdue Tasks</string>
    <string name="UnassignedList_title">Unassigned Tasks</string>

    <!--This is used for representing the repeat type in repeatEventEditor, for use in bottom Adapter-->
    <string name="daily">Daily</string>
    <string name="weekCustom">Custom week</string>
    <string name="twoWeeks">Every 2 weeks</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>

    <!--Tags for Mod Buttons: specialty states-->
    <string name="repeating">repeating</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="type">type</string>
    <string name="startValues">startValues</string>
    <string name="endValues">endValues</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="clear">clear</string>

    <!-- Tags for List View Time Field -->
    <string name="listView_textForCompletedTask">Task completed on _</string>
    <string name="listView_textForCompletedTask_yesterday">Task was completed yesterday </string>
    <string name="listVIew_textForCompletedTask_today">Task was completed today</string>

    <string name="listView_textForOverdueTask_minutes">Task was due _ minutes ago</string>
    <string name="listView_textForOverdueTask_hours">Task was due _ hours ago</string>
    <string name="listView_textForOverdueTask_days">Task was due _ days ago</string>
    <string name="listView_textForOverdueTask_yesterday">Task was due yesterday</string>

    <string name="listView_textForUpcomingTask_inProgress">Task in progress</string>
    <string name="listView_textForUpcomingTask_dueToday">Task due today</string>
    <string name="listView_textForUpcomingTask_underHour">Task is due in _ minutes</string>
    <string name="listView_textForUpcomingTask_today">Task due today at _</string>
    <string name="listView_textForUpcomingTask_tomorrow">Task due tomorrow</string>
    <string name="listView_textForUpcomingTask_tomorrowAt">Task due tomorrow at _</string>
    <string name="listView_textForUpcomingTask_dueOn">Task is due on _</string>

    <!-- Tags for List View ComplexGoal -->
    <string name="listView_complexGoal_nextTaskIs">Next task is </string>
    <string name="listView_complexGoal_notScheduled">No task is scheduled next</string>
    <string name="listView_complexGoal_completedComplexGoal">This goal is accomplished!</string>

    <!-- Bottom Bar Complex View -->
    <string name="hint_newTask">Type to create new Task</string>
    <string name="hint_newGoal">Type to create new Complex Goal</string>
    <string name="hint_purpose">(Optional) what is the reason you are committing to this goal?</string>
    <string name="setDeadline">Set Deadline</string>

</resources>
