<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttonBar_repeatingBase"
        android:layout_width="0dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.fuchsundlowe.macrolife.BottomBar.ModButton
            android:id="@+id/type_editorBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/startTime_editorBase"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tag="@string/repeating"
            app:srcCompat="@drawable/repeat_24px" />

        <com.fuchsundlowe.macrolife.BottomBar.ModButton
            android:id="@+id/startTime_editorBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/endTime_editorBase"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/type_editorBase"
            app:layout_constraintTop_toTopOf="parent"
            android:tag="@string/startValues"
            app:srcCompat="@drawable/start_24px" />

        <com.fuchsundlowe.macrolife.BottomBar.ModButton
            android:id="@+id/endTime_editorBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_editorBase"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/startTime_editorBase"
            app:layout_constraintTop_toTopOf="parent"
            android:tag="@string/endValues"
            app:srcCompat="@drawable/end_24px" />

        <com.fuchsundlowe.macrolife.BottomBar.ModButton
            android:id="@+id/delete_editorBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_editorBase"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/endTime_editorBase"
            app:layout_constraintTop_toTopOf="parent"
            android:tag="@string/delete"
            app:srcCompat="@drawable/delete_24px" />

        <com.fuchsundlowe.macrolife.BottomBar.ModButton
            android:id="@+id/save_editorBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/delete_editorBase"
            app:layout_constraintTop_toTopOf="parent"
            android:tag="@string/save"
            app:srcCompat="@drawable/save_24px" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>